# hyprfinity

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: arch-packaging.yml  rust.yml
docs/: arch-packaging.md
packaging/arch/: PKGBUILD  PKGBUILD-git
packaging/linux/: hyprfinity-launch  hyprfinity.desktop
src/: autotune.rs  cli.rs  config.rs  debuglog.rs  gamescope.rs  hyprland.rs  main.rs  picker.rs  tui_config.rs  types.rs  util.rs
tests/: integration_config_show.rs
