[package]
name = "hyprfinity"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
ctrlc = "3.4"
toml = "0.8"
skim = "0.10"
crossterm = "0.28"
ratatui = "0.29"
